# share-the-wealth

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  api.py  docker-compose.yml  justfile  main.py  my_funds.txt  pyproject.toml  requirements.txt  setup.sh
.airflow/dags/: warehouse_etl_dag.py
airflow/dags/: warehouse_etl_dag.py
docs/: airflow-setup.md  architecture.md
share_the_wealth/: __init__.py
share_the_wealth.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
share_the_wealth/ai/: __init__.py  analyst.py  local_embeddings.py  rag_retriever.py
share_the_wealth/analysis/: __init__.py  fund_analyzer.py
share_the_wealth/api/: __init__.py  app.py  deps.py  fmp_budget.py  services.py  state.py
share_the_wealth/api/routes/: ai.py  etl.py  mirror.py  politicians.py  portfolio.py
share_the_wealth/cli/: __init__.py  main.py
share_the_wealth/config/: __init__.py  settings.py
share_the_wealth/execution/: __init__.py  broker.py
share_the_wealth/models/: __init__.py  execution.py  fund.py  trade.py
share_the_wealth/sources/: __init__.py  hedge_fund_fetcher.py  hedge_funds.py  prices.py  trade_fetcher.py
share_the_wealth/warehouse/: __init__.py  db.py  etl.py  repository.py
static/: index.html
